Mooi maken voor demo MT

--- a/bs-config.json
+++ b/bs-config.json
@@ -1,6 +1,6 @@
 {
   "server": {
-    "baseDir": ["./src", "./build/contracts"]
+    "baseDir": [".", "./build/contracts"]
   },
   "notify": false
 }
